Use RequestBatch similar to other functions and fixes